# cse310

./: .gitignore  README.md
codegen/: CMakeLists.txt  test1.c
codegen/Sample Input/: binexp.c  bubble_sort1.c  bubble_sort2.c  fibonacci.c  in1.c  in3.c  in6.c  odd.c  prime.c  test1_i.c
codegen/src/: backend8086.cc  frontend.cc  location.cc  main.cc  parse_utils.cc  parse_utils.h  parser.y  parser_context.cc  parser_context.h  scope_table.cc  scope_table.h  symbol_info.h  symbol_table.h  token.cc
codegen/src/ast/: ast_printer.cc  ast_printer.h  ast_visitor.h  decl.cc  decl.h  expr.cc  expr.h  stmt.cc  stmt.h  type.cc  type.h
codegen/src/codegen/: codegen.cc  codegen.h  register.cc  register.h
codegen/src/codegen/8086/: codegen_8086.cc  codegen_8086.h  preprocessor.cc  preprocessor.h
codegen/src/ir/: ir_address.cc  ir_address.h  ir_block.cc  ir_block.h  ir_gen.cc  ir_gen.h  ir_instr.cc  ir_instr.h  ir_parser.cc  ir_parser.h  ir_proc.cc  ir_proc.h  ir_program.cc  ir_program.h  ir_token.cc  ir_token.h  lexer.l
lexical-analyzer/: CMakeLists.txt  make_submission.sh  rename.py
lexical-analyzer/src/: lexer.h  lexer.l  main.cc  parse_utils.cc  parser_context.cc  parser_context.h  scope_table.h  sdbm_hash.h  token.cc  token.h
symbol-table/: CMakeLists.txt
symbol-table/src/: log.h  main.cc  parse_utils.cc  parse_utils.h  scope_table.cc  sdbm_hash.h  symbol_info.h  symbol_table.cc  symbol_table.h
syntax-analyzer/: CMakeLists.txt  test.c
syntax-analyzer/src/: lexer.l  location.cc  location.h  location_info.h  log.h  main.cc  parse_utils.h  parser.y  parser_context.cc  parser_context.h  scope_table.cc  scope_table.h  symbol_info.cc  symbol_info.h  symbol_table.cc  symbol_table.h  token.cc  token.h  type_table.h
syntax-analyzer/src/ast/: ast_node.h  ast_printer.cc  ast_printer.h  ast_visitor.h  cast.cc  cast.h  decl.cc  decl.h  expr..cc  expr.cc  expr.h  stmt.cc  stmt.h  type.cc  type.h
syntax-analyzer/src/pt/: pt_node.cc  pt_node.h
